# windeval-catalog

./: .gitattributes  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
src/windeval_catalog/: __init__.py  cat_handling.py  preprocessing.py
src/windeval_catalog/tests/: test_catalog.py  test_renaming.py
src/windeval_catalog/windeval_catalogs/: windeval_test_data.yaml
src/windeval_catalog/windeval_data_dir/windeval_test_data/: field_1.cdf  field_2.cdf  station_1.cdf  station_2.cdf
